metadata content v3